In this file, i try to keep track of important changes to my library, most importantly, changes 
that break client code.


Client-Code-Breaking Changes:

2022/08/02: jura::MediatedColleague::mediatorHasSentNotification has been renamed to 
            handleMediatorNotification and got an additional parameter
2020/12/17: rsMatrix: setSize renamed to setShape
2020/07/28: renamed rsRingBuffer to rsDelayBuffer
            renamed rsBuffer to rsRingBuffer
2020/05/08: rsOnePoleFilter::applyBidirectionally: renamed to applyForwardBackward
2019/11/26: renamed rsSpectrogram to rsSpectrogramProcessor
2019/10/20: rsLine2D: changed output parameters from references to pointers
2019/10/11: rapt::rsArray: renamed areBuffersApproximatelyEqual to almostEqual
                                   areBuffersEqual              to equal
                                   clipBuffer                   to clip
                                   copyBuffer                   to copy
2019/09/09: rapt::rsScaledAndShiftedSigmoid: renamed setPrototypeSigmoid to setSigmoid
2018/10/04: rosic::rsSubBandFilterDirectForm is now rsSubBandFilterMono
2018/08/10: AudioModule::createEditor expects an int parameter now
2018/08/09: ModulationSource subclasses now need to override getModulatorOutputSample() instead of updateModulationValue()


Other Changes:

