@@ -64,7 +64,7 @@ double ParameterGridInterval::getValue() const
 //-------------------------------------------------------------------------------------------------
 
 ParameterWithKeyVelScaling::ParameterWithKeyVelScaling(const juce::String& name, double min, 
-  double max, double defaultValue, int scaling, double interval)
+  double max, double defaultValue, Parameter::scalings scaling, double interval)
   : Parameter(name, min, max, defaultValue, scaling, interval)
   , keyParam(name + "ByKey", -200.0, 200.0, 0.0, LINEAR, 0.01)
   , velParam(name + "ByVel", -200.0, 200.0, 0.0, LINEAR, 0.01)
